Second commit for final four docs.

--- a/fp-def/dc-tech-spec_legacy_equipment.adoc
+++ b/fp-def/dc-tech-spec_legacy_equipment.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: dc-tech-spec/dc-tech-spec_legacy_equipment.html
+permalink: fp-def/dc-tech-spec_legacy_equipment.html
 keywords: legacy, equipment, cisco, end, life, eol, flexpod, datacenter, technical, specifications
-summary: lexPod is a flexible solution that enables you to use your existing equipment and new equipment that is currently for sale by Cisco and NetApp. Occasionally, certain models of equipment from both Cisco and NetApp are designated as end of life (EOL).
+summary: FlexPod is a flexible solution that enables you to use your existing equipment and new equipment that is currently for sale by Cisco and NetApp. Occasionally, certain models of equipment from both Cisco and NetApp are designated as end of life (EOL).
 ---
 
 = Legacy equipment
@@ -18,10 +18,9 @@ summary: lexPod is a flexible solution that enables you to use your existing equ
 // 2021-06-03 13:02:39.884058
 //
 
-[.lead]
 FlexPod is a flexible solution that enables you to use your existing equipment and new equipment that is currently for sale by Cisco and NetApp. Occasionally, certain models of equipment from both Cisco and NetApp are designated as end of life (EOL).
 
-Even though these equipment models are no longer available, if you purchased one of these models before the end-of- availability (EOA) date, you can use that equipment in a FlexPod configuration. A complete list of the legacy equipment models that are supported in FlexPod that are no longer for sale can be referenced on the https://mysupport.netapp.com/info/eoa/index.html[NetApp Service and Support Product Programs End of Availability Index^].
+Even though these equipment models are no longer available, if you purchased one of these models before the end-of-availability (EOA) date, you can use that equipment in a FlexPod configuration. A complete list of the legacy equipment models that are supported in FlexPod that are no longer for sale can be referenced on the https://mysupport.netapp.com/info/eoa/index.html[NetApp Service and Support Product Programs End of Availability Index^].
 
 For more information on legacy Cisco equipment, see the Cisco EOL and EOA notices for http://www.cisco.com/c/en/us/products/servers-unified-computing/ucs-c-series-rack-servers/eos-eol-notice-listing.html[Cisco UCS C-Series Rack Servers^], http://www.cisco.com/c/en/us/products/servers-unified-computing/ucs-b-series-blade-servers/eos-eol-notice-listing.html[Cisco UCS B-Series Blade Servers^], and https://www.cisco.com/c/en/us/products/eos-eol-listing.html[Nexus switches^].
 
@@ -32,7 +31,7 @@ Legacy FC Fabric support includes the following:
 
 Legacy software includes the following:
 
-* NetApp Data ONTAP operating in 7- Mode, 7.3.5 and later
+* NetApp Data ONTAP operating in 7-Mode, 7.3.5 and later
 * ONTAP 8.1.x through 9.0.x
 * Cisco UCS Manager 1.3 and later
 * Cisco UCS Manager 2.1 through 2.2.7
