--- a/fp-def/dc-tech-spec_netapp_components.adoc
+++ b/fp-def/dc-tech-spec_netapp_components.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: dc-tech-spec/dc-tech-spec_netapp_components.html
+permalink: fp-def/dc-tech-spec_netapp_components.html
 keywords: storage, controllers, cluster, interconnect, switches, drives, disk, shelves, licensing, options
 summary: NetApp storage controllers provide the storage foundation in the FlexPod architecture for both boot and application data storage. NetApp components include storage controllers, cluster interconnect switches, drives and disk shelves, and licensing options.
 ---
@@ -18,7 +18,6 @@ summary: NetApp storage controllers provide the storage foundation in the FlexPo
 // 2021-06-03 13:02:39.858851
 //
 
-[.lead]
 NetApp storage controllers provide the storage foundation in the FlexPod architecture for both boot and application data storage. NetApp components include storage controllers, cluster interconnect switches, drives and disk shelves, and licensing options.
 
 == NetApp storage controller options
@@ -82,7 +81,7 @@ http://www.netapp.com/us/products/storage-systems/disk-shelves-and-storage-media
 
 == NetApp software licensing options
 
-The table below lists the NetApp software licensing options that are available for the FlexPod Datacenter architecture. NetApp software is licensed at the FAS and AFF controller level.
+The following table lists the NetApp software licensing options that are available for the FlexPod Datacenter architecture. NetApp software is licensed at the FAS and AFF controller level.
 
 |===
 |NetApp software licensing |Part number |Technical specifications
