--- a/fp-def/dc-tech-spec_minimum_software_requirements.adoc
+++ b/fp-def/dc-tech-spec_minimum_software_requirements.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: dc-tech-spec/dc-tech-spec_minimum_software_requirements.html
+permalink: fp-def/dc-tech-spec_minimum_software_requirements.html
 keywords: software, requirements, minimum, flexpod, datacenter, techincal, specifications, cisco, ucs, manager
-summary: Below are the minimum software requirements for Flexpod configuration.
+summary: The following information describes the minimum software requirements for a Flexpod configuration.
 ---
 
 = Minimum software requirements
@@ -18,7 +18,6 @@ summary: Below are the minimum software requirements for Flexpod configuration.
 // 2021-06-03 13:02:39.822208
 //
 
-[.lead]
 A FlexPod configuration has the following minimum software requirements:
 
 * NetApp ONTAP:
@@ -26,7 +25,7 @@ A FlexPod configuration has the following minimum software requirements:
 * Cisco UCS Manager releases:
 ** Cisco UCS 6200 Series Fabric Interconnect—2.2(8a)
 ** Cisco UCS 6300 Series Fabric Interconnect—3.1(1e)
-** Cisco UCS 6400 Series Fabric Interconnect- -- 4.0(1)
+** Cisco UCS 6400 Series Fabric Interconnect—4.0(1)
 * For Cisco Nexus 5000 Series Switches, Cisco NX-OS software release 5.0(3)N1(1c) or later, including NX-OS 5.1.x
 * For Cisco Nexus 7000 Series Switches:
 ** The 4-slot chassis requires Cisco NX-OS software release 6.1(2) or later
