--- a/fp-def/dc-tech-spec_solution_overview.adoc
+++ b/fp-def/dc-tech-spec_solution_overview.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: fp-def/dc-tech-spec_solution_overview.html
-keywords: flexpod, datacenter, techincal, specifications, platform, architecture
+keywords: flexpod, datacenter, technucal, specifications, platform, architecture
 summary: The FlexPod platform is a predesigned, best practice data center architecture that is built on the Cisco Unified Computing System (Cisco UCS), the Cisco Nexus family of switches, and NetApp storage controllers (NetApp AFF or FAS systems).
 ---
 
