New tiles in project.yml files and addition of Cisco logos.

--- a/express/express-c-series-aff220-deploy_program_summary.adoc
+++ b/express/express-c-series-aff220-deploy_program_summary.adoc
@@ -22,6 +22,9 @@ summary: Industry trends indicate a vast data center transformation toward share
 
 Savita Kumari, NetApp
 
+In partnership with:
+image:cisco logo.png[Error: Missing Graphic Image]
+
 Industry trends indicate a vast data center transformation toward shared infrastructure and cloud computing. In addition, organizations seek a simple and effective solution for remote and branch offices, leveraging the technology with which they are familiar in their data center.
 
 FlexPod Express is a predesigned, best practice data center architecture that is built on the Cisco Unified Computing System (Cisco UCS), the Cisco Nexus family of switches, and NetApp storage technologies. The components in a FlexPod Express system are like their FlexPod Datacenter counterparts, enabling management synergies across the complete IT infrastructure environment on a smaller scale. FlexPod Datacenter and FlexPod Express are optimal platforms for virtualization and for bare-metal operating systems and enterprise workloads.
