--- a/express/express-c-series-aff220-design_executive_summary.adoc
+++ b/express/express-c-series-aff220-design_executive_summary.adoc
@@ -20,6 +20,8 @@ summary:
 //
 
 Savita Kumari, NetApp
+In partnership with:
+image:cisco logo.png[Error: Missing Graphic Image]
 
 Industry trends indicate a vast data center transformation toward shared infrastructure and cloud computing. In addition, organizations seek a simple and effective solution for remote and branch offices, leveraging the technology that they are familiar with in their data center.
 
