--- a/healthcare/ehr-meditech-deploy_overview.adoc
+++ b/healthcare/ehr-meditech-deploy_overview.adoc
@@ -21,6 +21,9 @@ summary: By running a MEDITECH environment on the FlexPod architectural foundati
 Brandon Agee and John Duignan, NetApp
 Mike Brennan and Jon Ebmeier, Cisco
 
+In partnership with:
+image:cisco logo.png[Error: Missing Graphic Image]
+
 == Overall solution benefits
 
 By running a MEDITECH environment on the FlexPod architectural foundation, your healthcare organization can expect an improvement in staff productivity and a decrease in capital and operational expenditures. FlexPod Datacenter for MEDITECH delivers several benefits that are specific to the healthcare industry, including:
