--- a/ontap-connector-for-intersight/index.adoc
+++ b/ontap-connector-for-intersight/index.adoc
@@ -14,6 +14,9 @@ summary: NetApp and Cisco have partnered to provide Cisco Intersight, a single-p
 
 Rachel Lithman and Sree Lanka, NetApp
 
+In partnership with:
+image:cisco logo.png[Error: Missing Graphic Image]
+
 == Introduction
 
 NetApp and Cisco have partnered to provide Cisco Intersight, a single-pane view of the FlexPod ecosystem. This simplified integration creates a unified management platform for all components in the FlexPod infrastructure and FlexPod solution. Cisco Intersight allows you to monitor NetApp storage, Cisco compute, and VMware inventory. It also allows you to orchestrate or automate workflows to accomplish storage and virtualization tasks in tandem.
