--- a/express/express-c-series-c190-design_executive_summary.adoc
+++ b/express/express-c-series-c190-design_executive_summary.adoc
@@ -21,6 +21,9 @@ summary: FlexPod Express is a predesigned, best practice data center architectur
 
 Savita Kumari, NetApp
 
+In partnership with:
+image:cisco logo.png[Error: Missing Graphic Image]
+
 Industry trends indicate a vast data center transformation toward shared infrastructure and cloud computing. In addition, organizations seek a simple and effective solution for remote and branch offices that uses the technology that they are familiar with in their data center.
 
 FlexPod Express is a predesigned, best practice data center architecture that is built on the Cisco Unified Computing System (Cisco UCS), the Cisco Nexus family of switches, and NetApp AFF systems. The components of FlexPod Express are like their FlexPod Datacenter counterparts, enabling management synergies across the complete IT infrastructure environment on a smaller scale. FlexPod Datacenter and FlexPod Express are optimal platforms for virtualization and for bare-metal operating systems and enterprise workloads.
