--- a/hybrid-cloud/cloud-insights_netapp_cloud_insights_for_flexpod.adoc
+++ b/hybrid-cloud/cloud-insights_netapp_cloud_insights_for_flexpod.adoc
@@ -20,6 +20,9 @@ summary: The solution detailed in this technical report is the configuration of 
 
 Alan Cowles, NetApp
 
+In partnership with: 
+image:cisco logo.png[Error: Missing Graphic Image]
+
 The solution detailed in this technical report is the configuration of the NetApp Cloud Insights service to monitor the NetApp AFF A800 storage system running NetApp ONTAP, which is deployed as a part of a FlexPod Datacenter solution.
 
 == Customer value
