--- a/fp-def/dc-tech-spec_netapp_ontap.adoc
+++ b/fp-def/dc-tech-spec_netapp_ontap.adoc
@@ -18,6 +18,6 @@ summary: NetApp ONTAP software is installed on every NetApp FAS or AFF system. F
 // 2021-06-03 13:02:39.807176
 //
 
-NetApp ONTAP software is installed on every NetApp FAS or AFF system. FlexPod is validated with ONTAP software, providing a highly scalable storage architecture that enables nondisruptive operations, nondisruptive upgrades, and an agile data infrastructure.
+NetApp ONTAP software is installed on all NetApp FAS, AFF, and AFF All SAN Array (ASA) systems. FlexPod is validated with ONTAP software, providing a highly scalable storage architecture that enables nondisruptive operations, nondisruptive upgrades, and an agile data infrastructure.
 
 For more information about ONTAP, see the http://www.netapp.com/us/products/data-management-software/ontap.aspx[ONTAP Data Management Software^] product page.
