--- a/fp-def/dc-tech-spec_optional_features.adoc
+++ b/fp-def/dc-tech-spec_optional_features.adoc
@@ -24,14 +24,29 @@ NetApp supports several optional components to further enhance FlexPod Datacente
 
 FlexPod supports both variants of the NetApp MetroCluster software for continuous availability, in either two- or four-node cluster configurations. MetroCluster provides synchronous replication for critical workloads. It requires a dual-site configuration that is connected with Cisco switching. The maximum supported distance between the sites is approximately 186 miles (300km) for MetroCluster FC and increases to approximately 435 miles (700km) for MetroCluster IP. The following figures illustrate a FlexPod Datacenter with NetApp MetroCluster architecture and FlexPod Datacenter with NetApp MetroCluster IP architecture, respectively.
 
-For more details and guidance, see the following deployment documents:
+Starting with ONTAP 9.8, ONTAP Mediator can be deployed at a third site to monitor the MetroCluster IP solution and to facilitate automated unplanned switchover when a site disaster occurs.
 
-* *FlexPod MetroCluster FC.* http://www.netapp.com/us/media/nva-0030-deploy.pdf[NVA-0030-DEPLOY: FlexPod Datacenter with NetApp MetroCluster FC^].
-* *FlexPod MetroCluster IP.* https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi67_n9k_aci_metrocluster.html[CVD: FlexPod Datacenter with NetApp MetroCluster IP^].
+The following figure depicts FlexPod Datacenter with NetApp MetroCluster architecture.
 
 image:dc-tech-spec_image1.png[Error: Missing Graphic Image]
 
+The following figure depicts the FlexPod Datacenter with NetApp MetroCluster IP architecture.
+
 image:dc-tech-spec_image2.png[Error: Missing Graphic Image]
+
+For a FlexPod MetroCluster IP solution deployment with extended layer-2 site-to-site connectivity, you can achieve cost savings by sharing ISL and using FlexPod switches as compliant MetroCluster IP switches if the network bandwidth and switches meet the requirements as illustrated in the following figure, which depicts the FlexPod MetroCluster IP solution with ISL sharing and compliant switches.
+
+image:dc-tech-spec_image10.png[Error: Missing Graphic Image]
+
+The following two figures depict the VXLAN Multi-Site fabric and the MetroCluster IP storage fabric for a FlexPod MetroCluster IP solution with VXLAN Multi-Site fabric deployment.
+
+* VXLAN Multi-Site fabric for FlexPod MetroCluster IP solution
+
+image:dc-tech-spec_image11.png[Error: Missing Graphic Image]
+
+* MetroCluster IP storage fabric for FlexPod MetroCluster IP solution
+
+image:dc-tech-spec_image12.png[Error: Missing Graphic Image]
 
 == End-to-end FC-NVMe
 
