--- a/fp-def/dc-tech-spec_solution_overview.adoc
+++ b/fp-def/dc-tech-spec_solution_overview.adoc
@@ -18,7 +18,7 @@ summary: The FlexPod platform is a predesigned, best practice data center archit
 // 2021-06-03 13:02:39.789338
 //
 
-Sree Lakshmi Lanka and Arvind Ramakrishnan, and Jyh-shing Chen, NetApp
+Sree Lakshmi Lanka, Arvind Ramakrishnan, and Jyh-shing Chen, NetApp
 
 The FlexPod platform is a predesigned, best practice data center architecture that is built on the Cisco Unified Computing System (Cisco UCS), the Cisco Nexus family of switches, and NetApp storage controllers (NetApp AFF, ASA, or FAS systems).
 
